# can-ban-board

./: .dockerignore  .gitignore  LICENSE  README.md  compose.yaml  run.docker.sh
backend/: .docker.env  .env  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/db/: db_context.rs  execute_result.rs  mod.rs
backend/src/handlers/: work_items.rs
backend/src/tests/: db_unit_tests.rs
backend/src/utility/: app_settings.rs  mod.rs
frontend/: Dockerfile  package.json  server.js
frontend/public/: apiHandler.js  formHandler.js  main.js  ui.js
frontend/src/api/: work_item_manager.rs
nginx/: Dockerfile  default.conf  nginx.conf
nginx/cert/: passwords
